llmring-server: align with source-of-truth v3.2
- Add profile support to aliases/usage and DB schema (folded into 001_initial)
- Receipts: Ed25519+deterministic-JSON signing/verify; include alias/profile/lock_digest/key_id; add issuance + public-key endpoints
- Usage: accept alias/profile; compute costs with provider-prefixed keys
- Registry router kept; future work to proxy GH Pages
- Python 3.10 compat timezone; remove external canonicalization dep
- Tests: pass via uv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pydantic>=2.7",
     "pydantic-settings>=2.4",
     "redis>=5.0",
-    "pgdbm @ file:///Users/juanre/prj/llmring-all/pgdbm",
+    "pgdbm @ file:///Users/juanre/prj/llmring/pgdbm",
+    "pynacl>=1.5",
 ]
 
 [project.scripts]
