core: key-scoped routes; restore api_key_id/project_id in schema; receipts JCS via rfc8785; error mapping; tests pass

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "redis>=5.0",
     "pgdbm @ file:///Users/juanre/prj/llmring/pgdbm",
     "pynacl>=1.5",
+    "rfc8785>=0.1.4",
     "cryptography>=42.0.0",
 ]
 
