--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,10 @@ allow-direct-references = true
 
 [dependency-groups]
 dev = [
+    "black>=25.1.0",
+    "isort>=6.0.1",
+    "mypy>=1.17.1",
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
+    "ruff>=0.12.9",
 ]
