feat(llmring-server): add comprehensive database management CLI
- Add CLI commands for database creation, migration, and status checking
- Support test, dev, and prod environments with proper separation
- Integrate with pgdbm for test database isolation
- Add serve command with environment-specific configuration
- Create detailed database management documentation
- Add click and asyncpg as dependencies for CLI functionality

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "pynacl>=1.5",
     "rfc8785>=0.1.4",
     "cryptography>=42.0.0",
+    "click>=8.1.0",
+    "asyncpg>=0.29",
 ]
 
 [project.license]
